--- a/src/components/Recomendaciones.module.css
+++ b/src/components/Recomendaciones.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 2.5rem 1rem;
+  padding: 5.5rem 1rem 2.5rem 1rem;
   min-height: 80vh;
   background: #fff;
 }
