--- a/src/components/UploadModal.module.css
+++ b/src/components/UploadModal.module.css
@@ -16,6 +16,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  border: 2.5px solid #f5c518;
 }
 .modal h3 {
   font-family: 'Jersey 15', monospace;
