--- a/src/components/Closet.module.css
+++ b/src/components/Closet.module.css
@@ -6,9 +6,11 @@
   border: 2px solid #f5c518;
   box-shadow: 0 4px 24px 0 #0004;
   padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-  max-width: 430px;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 100%;
+  width: 100%;
+  margin-left: 0;
+  margin-right: 0;
+  box-sizing: border-box;
 }
 .categoryExpand {
   overflow: hidden;
@@ -73,11 +75,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 5.5rem 1rem 2.5rem 1rem;
-  min-height: 80vh;
+  padding: 3.5rem 1vw 1.5rem 1vw;
+  min-height: 70vh;
   background: #232323;
   color: #fff;
   text-align: center;
+  width: 100%;
+  max-width: 100vw;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .closetContainer h2 {
@@ -89,11 +95,38 @@
 }
 
 .clothesGrid {
+  width: 100%;
+  box-sizing: border-box;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
   margin-bottom: 2.5rem;
   color: #fff;
+}
+
+@media (max-width: 700px) {
+  .closetContainer {
+    padding: 2.5rem 0.1rem 1rem 0.1rem;
+    width: 100vw;
+    max-width: 100vw;
+    overflow-x: hidden;
+  }
+  .categoryContainer {
+    max-width: 100vw;
+    width: 100vw;
+    margin-left: 0;
+    margin-right: 0;
+    padding: 0.5rem 0.1rem;
+    box-sizing: border-box;
+  }
+  .clothesGrid {
+    grid-template-columns: 1fr;
+    gap: 1.2rem;
+    width: 100vw;
+    max-width: 100vw;
+    margin-left: 0;
+    box-sizing: border-box;
+  }
 }
 
 .clothItem {
