--- a/src/components/logo.module.css
+++ b/src/components/logo.module.css
@@ -20,7 +20,6 @@
   letter-spacing: 1px;
 }
 
-/* Responsive */
 @media (max-width: 768px) {
   .logoText {
     font-size: 1.3rem;
@@ -40,7 +39,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex: 1; /* ocupa todo el espacio disponible entre izquierda y derecha */
-  margin: 0 auto; /* asegura el centrado visual */
-  position: relative; /* elimina absolute que generaba desplazamiento */
+  flex: 1;
+  margin: 0 auto;
+  position: relative;
 }
