--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,3 +1,4 @@
+
 .navbar {
   position: fixed;
   top: 0;
@@ -10,22 +11,17 @@
   z-index: 100;
   padding: 0 1rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   box-sizing: border-box;
   overflow: hidden;
 }
 
-.leftBlock {
+.centerLogoBlock {
   display: flex;
+  flex: 1;
+  justify-content: center;
   align-items: center;
-  gap: 1rem;
-  min-width: 0;
-}
-
-.centerText {
-  font-family: 'Jersey 15', monospace;
-  color: #d9d9d9;
 }
 
 .brand {
