--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import "./assets/variables";
+@import "./assets/mixins";
 
 @import url('https://fonts.googleapis.com/css2?family=Jersey+15&display=swap');
 
