--- a/src/components/Home.module.scss
+++ b/src/components/Home.module.scss
@@ -78,7 +78,7 @@
 .featured h3 {
   text-align: center;
   font-family: 'Jersey 15', $font-main;
-  color: $background-color;
+  color: #fff;
   margin-bottom: 1rem;
 }
 .categoryGrid {
